@@ -6,235 +6,197 @@
  */
 package com.powsybl.sensitivity;
 
-import org.junit.Before;
-import org.junit.Rule;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.powsybl.commons.AbstractConverterTest;
+import com.powsybl.commons.PowsyblException;
+import com.powsybl.commons.json.JsonUtil;
+import com.powsybl.contingency.*;
+import com.powsybl.sensitivity.json.SensitivityJsonModule;
 import org.junit.Test;
-import org.junit.rules.ExpectedException;
-import org.mockito.Mockito;
 
+import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.NoSuchElementException;
 
 import static org.junit.Assert.*;
 
 /**
- * @author Sebastien Murgey {@literal <sebastien.murgey at rte-france.com>}
+ * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
  */
-public class SensitivityAnalysisResultTest {
+public class SensitivityAnalysisResultTest extends AbstractConverterTest {
 
-    private SensitivityFactor factorOk;
-    private SensitivityFactor factorNok;
+    @Test
+    public void test() {
+        SensitivityFactor factor1 = new SensitivityFactor(SensitivityFunctionType.BRANCH_ACTIVE_POWER_1, "l",
+                                                          SensitivityVariableType.INJECTION_ACTIVE_POWER, "g",
+                                                          false, ContingencyContext.all());
+        SensitivityFactor factor2 = new SensitivityFactor(SensitivityFunctionType.BRANCH_ACTIVE_POWER_1, "l2",
+                                                          SensitivityVariableType.INJECTION_ACTIVE_POWER, "g2",
+                                                          false, ContingencyContext.none());
+        SensitivityFactor factor3 = new SensitivityFactor(SensitivityFunctionType.BRANCH_CURRENT_1, "l",
+                SensitivityVariableType.INJECTION_ACTIVE_POWER, "g",
+                false, ContingencyContext.all());
+        SensitivityFactor factor4 = new SensitivityFactor(SensitivityFunctionType.BRANCH_CURRENT_1, "l2",
+                SensitivityVariableType.INJECTION_ACTIVE_POWER, "g2",
+                false, ContingencyContext.none());
 
-    @Rule
-    public ExpectedException exception = ExpectedException.none();
+        List<SensitivityFactor> factors = List.of(factor1, factor2, factor3, factor4);
+        List<Contingency> contingencies = List.of(new Contingency("NHV1_NHV2_2", new BranchContingency("NHV1_NHV2_2")), new Contingency("NHV2_NHV3"));
+        SensitivityValue value1 = new SensitivityValue(0, 0, 1d, 2d);
+        SensitivityValue value2 = new SensitivityValue(1, -1, 3d, 4d);
+        SensitivityValue value3 = new SensitivityValue(2, 0, 1d, 2d);
+        SensitivityValue value4 = new SensitivityValue(3, -1, 3d, 4d);
+        List<SensitivityAnalysisResult.SensitivityContingencyStatus> contingencyStatus = new ArrayList<>();
+        contingencyStatus.add(new SensitivityAnalysisResult.SensitivityContingencyStatus("NHV1_NHV2_2", SensitivityAnalysisResult.Status.SUCCESS));
+        contingencyStatus.add(new SensitivityAnalysisResult.SensitivityContingencyStatus("NHV2_NHV3", SensitivityAnalysisResult.Status.NO_IMPACT));
 
-    @Before
-    public void setUp() {
-        SensitivityVariable sensitivityVariable = Mockito.mock(SensitivityVariable.class);
-        // Both factors hae same variable but different function
-        factorOk = Mockito.mock(SensitivityFactor.class);
-        Mockito.when(factorOk.getFunction()).thenReturn(Mockito.mock(SensitivityFunction.class));
-        Mockito.when(factorOk.getVariable()).thenReturn(sensitivityVariable);
-        factorNok = Mockito.mock(SensitivityFactor.class);
-        Mockito.when(factorNok.getFunction()).thenReturn(Mockito.mock(SensitivityFunction.class));
-        Mockito.when(factorNok.getVariable()).thenReturn(sensitivityVariable);
+        List<SensitivityValue> values = List.of(value1, value2, value3, value4);
+        SensitivityAnalysisResult result = new SensitivityAnalysisResult(factors, contingencyStatus, values);
+        assertEquals(4, result.getValues().size());
+        assertEquals(2, result.getValues("NHV1_NHV2_2").size());
+
+        assertEquals(1d, result.getSensitivityValue("NHV1_NHV2_2", "g", "l", SensitivityFunctionType.BRANCH_ACTIVE_POWER_1), 0d);
+        assertEquals(2d, result.getFunctionReferenceValue("NHV1_NHV2_2", "l", SensitivityFunctionType.BRANCH_ACTIVE_POWER_1), 0d);
+        assertEquals(1d, result.getBranchFlow1SensitivityValue("NHV1_NHV2_2", "g", "l"), 0d);
+        assertEquals(2d, result.getBranchFlow1FunctionReferenceValue("NHV1_NHV2_2", "l"), 0d);
+
+        assertEquals(1d, result.getSensitivityValue("NHV1_NHV2_2", "g", "l", SensitivityFunctionType.BRANCH_CURRENT_1), 0d);
+        assertEquals(2d, result.getFunctionReferenceValue("NHV1_NHV2_2", "l", SensitivityFunctionType.BRANCH_CURRENT_1), 0d);
+        assertEquals(1d, result.getBranchCurrent1SensitivityValue("NHV1_NHV2_2", "g", "l"), 0d);
+        assertEquals(2d, result.getBranchCurrent1FunctionReferenceValue("NHV1_NHV2_2", "l"), 0d);
+
+        assertThrows(PowsyblException.class, () -> result.getFunctionReferenceValue("NHV1_NHV2_2", "llll", SensitivityFunctionType.BRANCH_ACTIVE_POWER_1));
+        assertThrows(PowsyblException.class, () -> result.getSensitivityValue("NHV1_NHV2_2", "g", "l1", SensitivityFunctionType.BRANCH_ACTIVE_POWER_1));
+        assertEquals(3d, result.getSensitivityValue(null, "g2", "l2", SensitivityFunctionType.BRANCH_ACTIVE_POWER_1), 0d);
+        assertEquals(3d, result.getSensitivityValue("g2", "l2", SensitivityFunctionType.BRANCH_ACTIVE_POWER_1), 0d);
+        assertEquals(3d, result.getBranchCurrent1SensitivityValue("g2", "l2"), 0d);
+        assertEquals(4d, result.getBranchFlow1FunctionReferenceValue("l2"), 0d);
+        assertEquals(4d, result.getBranchCurrent1FunctionReferenceValue("l2"), 0d);
+        assertEquals(2, result.getPreContingencyValues().size());
+
+        assertEquals(SensitivityAnalysisResult.Status.SUCCESS, result.getContingencyStatus("NHV1_NHV2_2"));
+        assertEquals(SensitivityAnalysisResult.Status.NO_IMPACT, result.getContingencyStatus("NHV2_NHV3"));
     }
 
     @Test
-    public void isOk() {
-        SensitivityAnalysisResult resultsOk = new SensitivityAnalysisResult(true, Collections.emptyMap(), "", Collections.emptyList(), Collections.emptyMap());
-        assertTrue(resultsOk.isOk());
+    public void testSide2() {
+        SensitivityFactor factor1 = new SensitivityFactor(SensitivityFunctionType.BRANCH_ACTIVE_POWER_2, "l",
+                SensitivityVariableType.INJECTION_ACTIVE_POWER, "g",
+                false, ContingencyContext.all());
+        SensitivityFactor factor2 = new SensitivityFactor(SensitivityFunctionType.BRANCH_ACTIVE_POWER_2, "l2",
+                SensitivityVariableType.INJECTION_ACTIVE_POWER, "g2",
+                false, ContingencyContext.none());
+        SensitivityFactor factor3 = new SensitivityFactor(SensitivityFunctionType.BRANCH_CURRENT_2, "l",
+                SensitivityVariableType.INJECTION_ACTIVE_POWER, "g",
+                false, ContingencyContext.all());
+        SensitivityFactor factor4 = new SensitivityFactor(SensitivityFunctionType.BRANCH_CURRENT_2, "l2",
+                SensitivityVariableType.INJECTION_ACTIVE_POWER, "g2",
+                false, ContingencyContext.none());
 
-        SensitivityAnalysisResult resultsNok = new SensitivityAnalysisResult(false, Collections.emptyMap(), "", Collections.emptyList(), Collections.emptyMap());
-        assertFalse(resultsNok.isOk());
+        List<SensitivityFactor> factors = List.of(factor1, factor2, factor3, factor4);
+        List<Contingency> contingencies = List.of(new Contingency("NHV1_NHV2_2", new BranchContingency("NHV1_NHV2_2")));
+        SensitivityValue value1 = new SensitivityValue(0, 0, 1d, 2d);
+        SensitivityValue value2 = new SensitivityValue(1, -1, 3d, 4d);
+        SensitivityValue value3 = new SensitivityValue(2, 0, 1d, 2d);
+        SensitivityValue value4 = new SensitivityValue(3, -1, 3d, 4d);
+        List<SensitivityValue> values = List.of(value1, value2, value3, value4);
+        List<SensitivityAnalysisResult.SensitivityContingencyStatus> contingencyStatus = new ArrayList<>();
+        contingencies.forEach(c -> contingencyStatus.add(new SensitivityAnalysisResult.SensitivityContingencyStatus(c.getId(), SensitivityAnalysisResult.Status.SUCCESS)));
+        SensitivityAnalysisResult result = new SensitivityAnalysisResult(factors, contingencyStatus, values);
+        assertEquals(4, result.getValues().size());
+        assertEquals(2, result.getValues("NHV1_NHV2_2").size());
+
+        assertEquals(1d, result.getSensitivityValue("NHV1_NHV2_2", "g", "l", SensitivityFunctionType.BRANCH_ACTIVE_POWER_2), 0d);
+        assertEquals(2d, result.getFunctionReferenceValue("NHV1_NHV2_2", "l", SensitivityFunctionType.BRANCH_ACTIVE_POWER_2), 0d);
+        assertEquals(1d, result.getBranchFlow2SensitivityValue("NHV1_NHV2_2", "g", "l"), 0d);
+        assertEquals(2d, result.getBranchFlow2FunctionReferenceValue("NHV1_NHV2_2", "l"), 0d);
+
+        assertEquals(1d, result.getSensitivityValue("NHV1_NHV2_2", "g", "l", SensitivityFunctionType.BRANCH_CURRENT_2), 0d);
+        assertEquals(2d, result.getFunctionReferenceValue("NHV1_NHV2_2", "l", SensitivityFunctionType.BRANCH_CURRENT_2), 0d);
+        assertEquals(1d, result.getBranchCurrent2SensitivityValue("NHV1_NHV2_2", "g", "l"), 0d);
+        assertEquals(2d, result.getBranchCurrent2FunctionReferenceValue("NHV1_NHV2_2", "l"), 0d);
+
+        assertThrows(PowsyblException.class, () -> result.getFunctionReferenceValue("NHV1_NHV2_2", "llll", SensitivityFunctionType.BRANCH_ACTIVE_POWER_2));
+        assertThrows(PowsyblException.class, () -> result.getSensitivityValue("NHV1_NHV2_2", "g", "l1", SensitivityFunctionType.BRANCH_ACTIVE_POWER_2));
+        assertEquals(3d, result.getSensitivityValue(null, "g2", "l2", SensitivityFunctionType.BRANCH_ACTIVE_POWER_2), 0d);
+        assertEquals(3d, result.getBranchCurrent2SensitivityValue("g2", "l2"), 0d);
+        assertEquals(4d, result.getBranchFlow2FunctionReferenceValue("l2"), 0d);
+        assertEquals(4d, result.getBranchCurrent2FunctionReferenceValue("l2"), 0d);
+        assertEquals(2, result.getPreContingencyValues().size());
     }
 
     @Test
-    public void getMetrics() {
-        Map<String, String > metrics = new HashMap<>();
-        metrics.put("Key 1", "Val 1");
-        metrics.put("Key 2", "Val 2");
-        metrics.put("Key 3", "Val 3");
-        SensitivityAnalysisResult results = new SensitivityAnalysisResult(true, metrics, "", Collections.emptyList(), Collections.emptyMap());
-        assertEquals(metrics.size(), results.getMetrics().size());
-        assertEquals("Val 1", results.getMetrics().get("Key 1"));
-        assertEquals("Val 2", results.getMetrics().get("Key 2"));
-        assertEquals("Val 3", results.getMetrics().get("Key 3"));
+    public void testBusVoltage() {
+        SensitivityFactor factor1 = new SensitivityFactor(SensitivityFunctionType.BUS_VOLTAGE, "l",
+                SensitivityVariableType.BUS_TARGET_VOLTAGE, "g",
+                false, ContingencyContext.all());
+        SensitivityFactor factor2 = new SensitivityFactor(SensitivityFunctionType.BUS_VOLTAGE, "l2",
+                SensitivityVariableType.BUS_TARGET_VOLTAGE, "g2",
+                false, ContingencyContext.none());
+
+        List<SensitivityFactor> factors = List.of(factor1, factor2);
+        List<Contingency> contingencies = List.of(new Contingency("NHV1_NHV2_2", new BranchContingency("NHV1_NHV2_2")));
+        SensitivityValue value1 = new SensitivityValue(0, 0, 1d, 2d);
+        SensitivityValue value2 = new SensitivityValue(1, -1, 3d, 4d);
+        List<SensitivityValue> values = List.of(value1, value2);
+        List<SensitivityAnalysisResult.SensitivityContingencyStatus> contingencyStatus = new ArrayList<>();
+        contingencies.forEach(c -> contingencyStatus.add(new SensitivityAnalysisResult.SensitivityContingencyStatus(c.getId(), SensitivityAnalysisResult.Status.SUCCESS)));
+        SensitivityAnalysisResult result = new SensitivityAnalysisResult(factors, contingencyStatus, values);
+        assertEquals(2, result.getValues().size());
+        assertEquals(1, result.getValues("NHV1_NHV2_2").size());
+
+        assertEquals(1d, result.getSensitivityValue("NHV1_NHV2_2", "g", "l", SensitivityFunctionType.BUS_VOLTAGE), 0d);
+        assertEquals(2d, result.getFunctionReferenceValue("NHV1_NHV2_2", "l", SensitivityFunctionType.BUS_VOLTAGE), 0d);
+        assertEquals(1d, result.getBusVoltageSensitivityValue("NHV1_NHV2_2", "g", "l"), 0d);
+        assertEquals(2d, result.getBusVoltageFunctionReferenceValue("NHV1_NHV2_2", "l"), 0d);
     }
 
     @Test
-    public void getLogs() {
-        String logs = "I don't know half of you half as well as I should like; and I like less than half of you half as well as you deserve.";
-        SensitivityAnalysisResult results = new SensitivityAnalysisResult(true, Collections.emptyMap(), logs, Collections.emptyList(), Collections.emptyMap());
-        assertEquals(logs, results.getLogs());
+    public void testCompareSensivitiyValueKeysEqualsNotEquals() {
+        SensitivityValueKey key1 = new SensitivityValueKey(null, "l1", "g1", SensitivityFunctionType.BRANCH_CURRENT_1);
+        SensitivityValueKey key2 = new SensitivityValueKey("c1", "l1", "g1", SensitivityFunctionType.BRANCH_CURRENT_1);
+        SensitivityValueKey key3 = new SensitivityValueKey(null, "l1", "g1", SensitivityFunctionType.BRANCH_CURRENT_2);
+        SensitivityValueKey key4 = new SensitivityValueKey(null, "l2", "g1", SensitivityFunctionType.BRANCH_CURRENT_2);
+        SensitivityValueKey key5 = new SensitivityValueKey(null, "l2", "g3", SensitivityFunctionType.BRANCH_CURRENT_2);
+
+        assertEquals(key1, key1);
+        assertNotEquals(key1, key2);
+        assertNotEquals(key2, key3);
+        assertNotEquals(key3, key4);
+        assertNotEquals(key4, key5);
+
+        String dummy = "dummy";
+        assertNotEquals(key1, dummy);
     }
 
     @Test
-    public void createResultsWithNullValues() {
-        exception.expect(NullPointerException.class);
-        new SensitivityAnalysisResult(true, Collections.emptyMap(), "", null);
-    }
+    public void testSerializeDeserialize() throws IOException {
+        SensitivityFactor factor1 = new SensitivityFactor(SensitivityFunctionType.BRANCH_ACTIVE_POWER_1, "l",
+                SensitivityVariableType.INJECTION_ACTIVE_POWER, "g",
+                false, ContingencyContext.all());
+        SensitivityFactor factor2 = new SensitivityFactor(SensitivityFunctionType.BRANCH_ACTIVE_POWER_1, "l2",
+                SensitivityVariableType.INJECTION_ACTIVE_POWER, "g2",
+                false, ContingencyContext.none());
+        SensitivityFactor factor3 = new SensitivityFactor(SensitivityFunctionType.BRANCH_CURRENT_1, "l",
+                SensitivityVariableType.INJECTION_ACTIVE_POWER, "g",
+                false, ContingencyContext.all());
+        SensitivityFactor factor4 = new SensitivityFactor(SensitivityFunctionType.BRANCH_CURRENT_1, "l2",
+                SensitivityVariableType.INJECTION_ACTIVE_POWER, "g2",
+                false, ContingencyContext.none());
+        List<SensitivityFactor> factors = List.of(factor1, factor2, factor3, factor4);
 
-    @Test
-    public void getSensitivityValues() {
-        List<SensitivityValue> values = new ArrayList<>();
-        values.add(new SensitivityValue(factorOk, Double.NaN, Double.NaN, Double.NaN));
-        values.add(new SensitivityValue(factorNok, Double.NaN, Double.NaN, Double.NaN));
-        SensitivityAnalysisResult results = new SensitivityAnalysisResult(true, Collections.emptyMap(), "", values, Collections.emptyMap());
-        assertEquals(values.size(), results.getSensitivityValues().size());
-    }
+        SensitivityValue value1 = new SensitivityValue(0, 0, 1d, 2d);
+        SensitivityValue value2 = new SensitivityValue(1, -1, 3d, 4d);
+        SensitivityValue value3 = new SensitivityValue(2, 0, 1d, 2d);
+        SensitivityValue value4 = new SensitivityValue(3, -1, 3d, 4d);
+        List<SensitivityValue> values = List.of(value1, value2, value3, value4);
 
-    @Test
-    public void getSensitivityValuesContingency() {
-        List<SensitivityValue> values = new ArrayList<>();
-        values.add(new SensitivityValue(factorOk, Double.NaN, Double.NaN, Double.NaN));
-        values.add(new SensitivityValue(factorNok, Double.NaN, Double.NaN, Double.NaN));
-        Map<String, List<SensitivityValue>> valuesContingency = Collections.singletonMap("Contingency", values);
-        SensitivityAnalysisResult results = new SensitivityAnalysisResult(true, Collections.emptyMap(), "", values, valuesContingency);
-        assertEquals(valuesContingency.get("Contingency").size(), results.getSensitivityValuesContingencies().get("Contingency").size());
-    }
-
-    @Test
-    public void getSensitivityValuesByFunction() {
-        List<SensitivityValue> values = new ArrayList<>();
-        values.add(new SensitivityValue(factorOk, Double.NaN, Double.NaN, Double.NaN));
-        values.add(new SensitivityValue(factorNok, Double.NaN, Double.NaN, Double.NaN));
-        SensitivityAnalysisResult results = new SensitivityAnalysisResult(true, Collections.emptyMap(), "", values, Collections.emptyMap());
-        assertEquals(1, results.getSensitivityValuesByFunction(factorOk.getFunction()).size());
-        assertEquals(1, results.getSensitivityValuesByFunction(factorNok.getFunction()).size());
-    }
-
-    @Test
-    public void getSensitivityValuesByFunctionContingency() {
-        List<SensitivityValue> values = new ArrayList<>();
-        values.add(new SensitivityValue(factorOk, Double.NaN, Double.NaN, Double.NaN));
-        values.add(new SensitivityValue(factorNok, Double.NaN, Double.NaN, Double.NaN));
-        Map<String, List<SensitivityValue>> valuesContingency = Collections.singletonMap("Contingency", values);
-        SensitivityAnalysisResult results = new SensitivityAnalysisResult(true, Collections.emptyMap(), "", values, valuesContingency);
-        assertEquals(1, results.getSensitivityValuesByFunction(factorOk.getFunction(), "Contingency").size());
-        assertEquals(1, results.getSensitivityValuesByFunction(factorNok.getFunction(), "Contingency").size());
-    }
-
-    @Test
-    public void getSensitivityValuesByVariable() {
-        List<SensitivityValue> values = new ArrayList<>();
-        values.add(new SensitivityValue(factorOk, Double.NaN, Double.NaN, Double.NaN));
-        values.add(new SensitivityValue(factorNok, Double.NaN, Double.NaN, Double.NaN));
-        SensitivityAnalysisResult results = new SensitivityAnalysisResult(true, Collections.emptyMap(), "", values, Collections.emptyMap());
-        assertEquals(2, results.getSensitivityValuesByVariable(factorOk.getVariable()).size());
-        assertEquals(2, results.getSensitivityValuesByVariable(factorNok.getVariable()).size());
-    }
-
-    @Test
-    public void getSensitivityValuesByVariableContingency() {
-        List<SensitivityValue> values = new ArrayList<>();
-        values.add(new SensitivityValue(factorOk, Double.NaN, Double.NaN, Double.NaN));
-        values.add(new SensitivityValue(factorNok, Double.NaN, Double.NaN, Double.NaN));
-        Map<String, List<SensitivityValue>> valuesContingency = Collections.singletonMap("Contingency", values);
-        SensitivityAnalysisResult results = new SensitivityAnalysisResult(true, Collections.emptyMap(), "", values, valuesContingency);
-        assertEquals(2, results.getSensitivityValuesByVariable(factorOk.getVariable(), "Contingency").size());
-        assertEquals(2, results.getSensitivityValuesByVariable(factorNok.getVariable(), "Contingency").size());
-    }
-
-    @Test
-    public void getNonExistingSensitivityValueByFunctionAndVariable() {
-        List<SensitivityValue> values = new ArrayList<>();
-        values.add(new SensitivityValue(factorOk, Double.NaN, Double.NaN, Double.NaN));
-        values.add(new SensitivityValue(factorNok, Double.NaN, Double.NaN, Double.NaN));
-        SensitivityAnalysisResult results = new SensitivityAnalysisResult(true, Collections.emptyMap(), "", values, Collections.emptyMap());
-
-        SensitivityFunction wrongFunction = Mockito.mock(SensitivityFunction.class);
-        SensitivityVariable wrongVariable = Mockito.mock(SensitivityVariable.class);
-        exception.expect(NoSuchElementException.class);
-        results.getSensitivityValue(wrongFunction, wrongVariable);
-    }
-
-    @Test
-    public void getNonExistingSensitivityValueByFunctionAndVariableContingency() {
-        List<SensitivityValue> values = new ArrayList<>();
-        values.add(new SensitivityValue(factorOk, Double.NaN, Double.NaN, Double.NaN));
-        values.add(new SensitivityValue(factorNok, Double.NaN, Double.NaN, Double.NaN));
-        Map<String, List<SensitivityValue>> valuesContingency = Collections.singletonMap("Contingency", values);
-        SensitivityAnalysisResult results = new SensitivityAnalysisResult(true, Collections.emptyMap(), "", values, valuesContingency);
-
-        SensitivityFunction wrongFunction = Mockito.mock(SensitivityFunction.class);
-        SensitivityVariable wrongVariable = Mockito.mock(SensitivityVariable.class);
-        exception.expect(NoSuchElementException.class);
-        results.getSensitivityValue(wrongFunction, wrongVariable, "Contingency");
-    }
-
-    @Test
-    public void getNonExistingSensitivityValueByFactor() {
-        List<SensitivityValue> values = new ArrayList<>();
-        values.add(new SensitivityValue(factorOk, Double.NaN, Double.NaN, Double.NaN));
-        values.add(new SensitivityValue(factorNok, Double.NaN, Double.NaN, Double.NaN));
-        SensitivityAnalysisResult results = new SensitivityAnalysisResult(true, Collections.emptyMap(), "", values, Collections.emptyMap());
-
-        SensitivityFactor wrongFactor = Mockito.mock(SensitivityFactor.class);
-        Mockito.when(wrongFactor.getFunction()).thenReturn(Mockito.mock(SensitivityFunction.class));
-        Mockito.when(wrongFactor.getVariable()).thenReturn(Mockito.mock(SensitivityVariable.class));
-        exception.expect(NoSuchElementException.class);
-        results.getSensitivityValue(wrongFactor);
-    }
-
-    @Test
-    public void getNonExistingSensitivityValueByFactorContingency() {
-        List<SensitivityValue> values = new ArrayList<>();
-        values.add(new SensitivityValue(factorOk, Double.NaN, Double.NaN, Double.NaN));
-        values.add(new SensitivityValue(factorNok, Double.NaN, Double.NaN, Double.NaN));
-        Map<String, List<SensitivityValue>> valuesContingency = Collections.singletonMap("Contingency", values);
-        SensitivityAnalysisResult results = new SensitivityAnalysisResult(true, Collections.emptyMap(), "", values, valuesContingency);
-
-        SensitivityFactor wrongFactor = Mockito.mock(SensitivityFactor.class);
-        Mockito.when(wrongFactor.getFunction()).thenReturn(Mockito.mock(SensitivityFunction.class));
-        Mockito.when(wrongFactor.getVariable()).thenReturn(Mockito.mock(SensitivityVariable.class));
-        exception.expect(NoSuchElementException.class);
-        results.getSensitivityValue(wrongFactor, "Contingency");
-    }
-
-    @Test
-    public void getSensitivityValue() {
-        List<SensitivityValue> values = new ArrayList<>();
-        values.add(new SensitivityValue(factorOk, Double.NaN, Double.NaN, Double.NaN));
-        values.add(new SensitivityValue(factorNok, Double.NaN, Double.NaN, Double.NaN));
-        SensitivityAnalysisResult results = new SensitivityAnalysisResult(true, Collections.emptyMap(), "", values, Collections.emptyMap());
-        assertSame(factorOk, results.getSensitivityValue(factorOk.getFunction(), factorOk.getVariable()).getFactor());
-        assertSame(factorNok, results.getSensitivityValue(factorNok.getFunction(), factorNok.getVariable()).getFactor());
-        assertSame(factorOk, results.getSensitivityValue(factorOk).getFactor());
-        assertSame(factorNok, results.getSensitivityValue(factorNok).getFactor());
-    }
-
-    @Test
-    public void getSensitivityValueContingency() {
-        List<SensitivityValue> values = new ArrayList<>();
-        values.add(new SensitivityValue(factorOk, Double.NaN, Double.NaN, Double.NaN));
-        values.add(new SensitivityValue(factorNok, Double.NaN, Double.NaN, Double.NaN));
-        Map<String, List<SensitivityValue>> valuesContingency = Collections.singletonMap("Contingency", values);
-        SensitivityAnalysisResult results = new SensitivityAnalysisResult(true, Collections.emptyMap(), "", values, valuesContingency);
-        assertSame(factorOk, results.getSensitivityValue(factorOk.getFunction(), factorOk.getVariable(), "Contingency").getFactor());
-        assertSame(factorNok, results.getSensitivityValue(factorNok.getFunction(), factorNok.getVariable(), "Contingency").getFactor());
-        assertSame(factorOk, results.getSensitivityValue(factorOk, "Contingency").getFactor());
-        assertSame(factorNok, results.getSensitivityValue(factorNok, "Contingency").getFactor());
-    }
-
-    @Test
-    public void shortConstructor() {
-        SensitivityAnalysisResult result = new SensitivityAnalysisResult(true, new HashMap<>(),
-            "fake logs", new ArrayList<>());
-        assertTrue(result.getSensitivityValuesContingencies().isEmpty());
-    }
-
-    @Test
-    public void emptyMethod() {
-        SensitivityAnalysisResult result = SensitivityAnalysisResult.empty();
-        assertFalse(result.isOk());
-        assertTrue(result.getMetrics().isEmpty());
-        assertTrue(result.getLogs().isEmpty());
-        assertTrue(result.getSensitivityValues().isEmpty());
-        assertTrue(result.getSensitivityValuesContingencies().isEmpty());
+        List<Contingency> contingencies = List.of(new Contingency("NHV1_NHV2_2", new BranchContingency("NHV1_NHV2_2")));
+        List<SensitivityAnalysisResult.SensitivityContingencyStatus> contingencyStatus = new ArrayList<>();
+        contingencies.forEach(c -> contingencyStatus.add(new SensitivityAnalysisResult.SensitivityContingencyStatus(c.getId(), SensitivityAnalysisResult.Status.SUCCESS)));
+        SensitivityAnalysisResult result = new SensitivityAnalysisResult(factors, contingencyStatus, values);
+        ObjectMapper objectMapper = JsonUtil.createObjectMapper().registerModule(new SensitivityJsonModule());
+        roundTripTest(result, (result2, jsonFile) -> JsonUtil.writeJson(jsonFile, result, objectMapper),
+            jsonFile -> JsonUtil.readJson(jsonFile, SensitivityAnalysisResult.class, objectMapper), "/SensitivityAnalysisResultRefV1.json");
     }
 }
